--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,8 @@ board = d1_mini
 framework = arduino
 upload_port = COM7
 monitor_port = COM7
+lib_deps = 
+	alanswx/ESPAsyncWiFiManager@^0.31
+	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	bblanchon/ArduinoJson@^6.19.4
