--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	ottowinter/ESPAsyncTCP-esphome@^1.2.3
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.19.4
+	fastled/FastLED@^3.5.0
