--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.19.4
 	fastled/FastLED@^3.5.0
+	arduino-libraries/NTPClient@^3.2.1
