--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
-platform = espressif8266
+platform = espressif8266@4.2.1
 board = d1_mini
 framework = arduino
 upload_port = COM7
